# scratch

./: CMakeLists.txt  README.md
drivers/: CMakeLists.txt
examples/automation2040w/: CMakeLists.txt  automation2040w_read_adcs.cmake  automation2040w_read_adcs.cpp  automation2040w_read_inputs.cmake  automation2040w_read_inputs.cpp  automation2040w_switches_and_leds.cmake  automation2040w_switches_and_leds.cpp  automation2040w_toggle_outputs.cmake  automation2040w_toggle_outputs.cpp  automation2040w_toggle_relays.cmake  automation2040w_toggle_relays.cpp
examples/inky_frame/: CMakeLists.txt  inky_frame7_test.cmake  inky_frame7_test.cpp  inky_frame_day_planner.cmake  inky_frame_day_planner.cpp  inky_frame_jpeg_image.cmake  inky_frame_jpeg_image.cpp  inky_frame_sleepy_head.cmake  inky_frame_sleepy_head.cpp
examples/inventor2040w/: CMakeLists.txt
examples/pico_display/: pico_display_demo.cpp
examples/pico_rtc/: CMakeLists.txt  demo.cpp
examples/tufty2040/: tufty2040_drawing.cmake  tufty2040_drawing.cpp
libraries/: CMakeLists.txt
